--- a/src/app/components/detalhes-personagem/detalhes-personagem.component.html
+++ b/src/app/components/detalhes-personagem/detalhes-personagem.component.html
@@ -1,4 +1,4 @@
-<div class="mat-table-container">
+<div class="mat-table-container" *ngIf="personagem">
   <button (click)="voltar()" mat-fab extended color="warn">
     <mat-icon>arrow_back</mat-icon>
     Voltar
