--- a/src/app/shared/components/pesquisa/pesquisa.component.html
+++ b/src/app/shared/components/pesquisa/pesquisa.component.html
@@ -1,4 +1,4 @@
-<div class="navbar">
+<div class="container-pesquisa">
   <mat-form-field class="form-field">
     <mat-label>Digite o nome do personagem para econtrar</mat-label>
     <input
